--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
+    "@types/google.maps": "^3.58.1",
     "clean-webpack-plugin": "^4.0.0",
     "lite-server": "^2.6.1",
     "ts-loader": "^9.5.1",
@@ -25,6 +26,7 @@
   "description": "",
   "dependencies": {
     "@types/lodash": "^4.17.13",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "lodash": "^4.17.21",
